--- a/tutorial-project/core-tutorial/.classpath
+++ b/tutorial-project/core-tutorial/.classpath
@@ -24,8 +24,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="D:/TUTO/external_jars/ojdbc14.jar"/>
-	<classpathentry kind="lib" path="D:/TUTO/external_jars/hamcrest-core-1.2.jar"/>
-	<classpathentry kind="lib" path="D:/TUTO/external_jars/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="D:/TUTO/external_jars/mockito-all-2.0.2-beta.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
