--- a/tutorial-project/pom.xml
+++ b/tutorial-project/pom.xml
@@ -13,14 +13,16 @@
   <modules>
   	<module>spring-boot-web</module>
   	<module>spring-ws</module>
-    <module>core-tutorial</module>
+  	<!-- <module>core-tutorial</module> -->
     <module>jcr-data-migration</module>
+    <module>hibernate-poc</module>
   </modules>
   
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.BUILD-SNAPSHOT</version>
+		<!-- <version>2.0.4.BUILD-SNAPSHOT</version> -->
+		<version>2.0.2.RELEASE</version>
 	</parent>
 
   <properties>
@@ -32,6 +34,13 @@
   </properties>
 
   <dependencies>
+  
+  <dependency>
+    <groupId>org.codehaus.woodstox</groupId>
+    <artifactId>stax2-api</artifactId>
+    <version>4.0.0</version>
+</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
