--- a/tutorial-project/pom.xml
+++ b/tutorial-project/pom.xml
@@ -13,7 +13,7 @@
   <modules>
   	<module>spring-boot-web</module>
   	<module>spring-ws</module>
-    <module>core-tutorial</module>
+    <!-- <module>core-tutorial</module> -->
     <module>jcr-data-migration</module>
   </modules>
   
