--- a/tutorial-project/pom.xml
+++ b/tutorial-project/pom.xml
@@ -31,6 +31,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <slf4j.version>1.7.4</slf4j.version>
+    <hibernate.version>3.6.10.Final</hibernate.version>
   </properties>
 
   <dependencies>
