--- a/tutorial-project/pom.xml
+++ b/tutorial-project/pom.xml
@@ -32,6 +32,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <slf4j.version>1.7.4</slf4j.version>
     <hibernate.version>3.6.10.Final</hibernate.version>
+    <oracle14.db.version>10.2.0.4.0</oracle14.db.version>
+    <oracle8.db.version>12.2.0.1</oracle8.db.version>
   </properties>
 
   <dependencies>
