parent pom updated

--- a/tutorial-project/pom.xml
+++ b/tutorial-project/pom.xml
@@ -15,6 +15,7 @@
   	<module>spring-ws</module>
     <module>jcr-data-migration</module>
     <module>hibernate-poc</module>
+    <module>spring-boot-jpa-tuto</module>
   </modules>
   
     <parent>
