--- a/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
+++ b/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 # Keep the connection alive if idle for a long time (needed in production)
 
+logging.level.org.springframework=debug
+
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
