--- a/tutorial-project/spring-boot-jpa-tuto/pom.xml
+++ b/tutorial-project/spring-boot-jpa-tuto/pom.xml
@@ -29,6 +29,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+				<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>4.2.5.Final</version>
+		</dependency>
+		<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.3.10.Final</version>
+</dependency>
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-devtools</artifactId>
@@ -38,6 +48,10 @@
     	<groupId>org.projectlombok</groupId>
     	<artifactId>lombok</artifactId>	
 	 </dependency>
+	 <dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+	</dependency>
 	 
   </dependencies>
   
