--- a/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
+++ b/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
@@ -1,11 +1,48 @@
 # ===============================
+# ORACLE DB CONFIGURATION       =
+# ===============================
+
+# ===============================
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
-spring.datasource.username=system
-spring.datasource.password=root
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#### spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+#### spring.datasource.username=system
+#### spring.datasource.password=root
+#### spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+# Keep the connection alive if idle for a long time (needed in production)
+
+#### logging.level.org.springframework=debug
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+# Show or not log for each sql query
+#### spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
+#### spring.jpa.hibernate.ddl-auto=updat
+# Naming strategy
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+#### spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+
+
+# ---------------------------------------------------------------------------------------------------------------------------------------------
+
+
+# ===============================
+# Mysql DB CONFIGURATION        =
+# ===============================
+
+
+# ===============================
+# = DATA SOURCE
+# ===============================
+# Set here configurations for the database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/wipo_shared
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 
 logging.level.org.springframework=debug
@@ -20,4 +57,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=updat
 # Naming strategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
