--- a/tutorial-project/spring-boot-jpa-tuto/pom.xml
+++ b/tutorial-project/spring-boot-jpa-tuto/pom.xml
@@ -40,6 +40,12 @@
     <artifactId>hibernate-core</artifactId>
     <version>5.3.10.Final</version>
 </dependency>
+<dependency>
+    <groupId>org.hibernate.common</groupId>
+    <artifactId>hibernate-commons-annotations</artifactId>
+    <version>4.0.3.Final</version>
+</dependency>
+
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-devtools</artifactId>
@@ -49,10 +55,23 @@
     	<groupId>org.projectlombok</groupId>
     	<artifactId>lombok</artifactId>	
 	 </dependency>
+	 <!-- JDBC connectors -->
 	 <dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
 	</dependency>
+<!-- 	<dependency>
+	 	<groupId>com.oracle</groupId>
+	 	<artifactId>ojdbc14</artifactId>
+	 	<version>${oracle14.db.version}</version>
+	 </dependency> -->
+	 <!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
+<dependency>
+    <groupId>oracle</groupId>
+    <artifactId>ojdbc6</artifactId>
+    <version>11.2.0.3</version>
+</dependency>
+	 
 	 
   </dependencies>
   
