--- a/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
+++ b/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
@@ -6,25 +6,25 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-#### spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
-#### spring.datasource.username=system
-#### spring.datasource.password=root
-#### spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+####myprops.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+####myprops.datasource.username=system
+####myprops.datasource.password=root
+####myprops.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 # Keep the connection alive if idle for a long time (needed in production)
 
-#### logging.level.org.springframework=debug
+logging.level.org.mypropsframework=debug
 
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
-#### spring.jpa.show-sql=true
+####myprops.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-#### spring.jpa.hibernate.ddl-auto=updat
+####myprops.jpa.hibernate.ddl-auto=update
 # Naming strategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-#### spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+####myprops.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
 
 # ---------------------------------------------------------------------------------------------------------------------------------------------
@@ -39,22 +39,22 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/wipo_shared
-spring.datasource.username=root
-spring.datasource.password=mysql
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+myprops.datasource.url=jdbc:mysql://localhost:3306/tutorial
+myprops.datasource.username=root
+myprops.datasource.password=mysql
+myprops.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 
-logging.level.org.springframework=debug
+####logging.level.org.mypropsframework=debug
 
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
-spring.jpa.show-sql=true
+myprops.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=updat
+myprops.jpa.hibernate.ddl-auto=updat
 # Naming strategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+myprops.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
