--- a/tutorial-project/spring-boot-jpa-tuto/pom.xml
+++ b/tutorial-project/spring-boot-jpa-tuto/pom.xml
@@ -7,19 +7,27 @@
     <artifactId>tutorial-project</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
+  
   <artifactId>spring-boot-jpa-tuto</artifactId>
   <name>spring-boot-jpa-tuto</name>
-	<url>www.mypage.com</url>	
-  <packaging>jar</packaging>
-  
+  <url>www.mypage.com</url>	
+  <packaging>war</packaging>
+    
   <properties>
- 
+  	<maven.compiler.target>1.8</maven.compiler.target>
+  	<maven.compiler.source>1.8</maven.compiler.source>
   </properties>
   
   <dependencies>
       <dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
+	<exclusions>
+			<exclusion>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-tomcat</artifactId>
+			</exclusion>
+		</exclusions>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
@@ -30,21 +38,23 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-				<dependency>
+		
+		<!-- hibernate dependency -->
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.2.5.Final</version>
+			<version>5.3.10.Final</version>
 		</dependency>
 		<dependency>
-    <groupId>org.hibernate</groupId>
-    <artifactId>hibernate-core</artifactId>
-    <version>5.3.10.Final</version>
-</dependency>
-<dependency>
-    <groupId>org.hibernate.common</groupId>
-    <artifactId>hibernate-commons-annotations</artifactId>
-    <version>4.0.3.Final</version>
-</dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.3.10.Final</version>
+		</dependency>
+<!-- 		<dependency>
+			<groupId>org.hibernate.common</groupId>
+			<artifactId>hibernate-commons-annotations</artifactId>
+			<version>4.0.3.Final</version>
+		</dependency> -->
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
@@ -66,10 +76,14 @@
 	 	<version>${oracle14.db.version}</version>
 	 </dependency> -->
 	 <!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
-<dependency>
+<!-- <dependency>
     <groupId>oracle</groupId>
     <artifactId>ojdbc6</artifactId>
     <version>11.2.0.3</version>
+</dependency> -->
+<dependency>
+	<groupId>javax.servlet</groupId>
+	<artifactId>javax.servlet-api</artifactId>
 </dependency>
 	 
 	 
