--- a/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
+++ b/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 ####myprops.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 # Keep the connection alive if idle for a long time (needed in production)
 
-logging.level.org.mypropsframework=debug
+#logging.level.org.springframework=debug
 
 # ===============================
 # = JPA / HIBERNATE
@@ -43,9 +43,10 @@ myprops.datasource.url=jdbc:mysql://localhost:3306/tutorial
 myprops.datasource.username=root
 myprops.datasource.password=mysql
 myprops.datasource.driver-class-name=com.mysql.jdbc.Driver
+server.port=8280
 # Keep the connection alive if idle for a long time (needed in production)
 
-####logging.level.org.mypropsframework=debug
+logging.level.org.springframework=debug
 
 # ===============================
 # = JPA / HIBERNATE
@@ -54,7 +55,9 @@ myprops.datasource.driver-class-name=com.mysql.jdbc.Driver
 myprops.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-myprops.jpa.hibernate.ddl-auto=updat
+#myprops.jpa.generate-ddl=true
+myprops.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
 # Naming strategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 myprops.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
