--- a/tutorial-project/spring-boot-jpa-tuto/pom.xml
+++ b/tutorial-project/spring-boot-jpa-tuto/pom.xml
@@ -22,12 +22,12 @@
       <dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
-	<exclusions>
-			<exclusion>
+<!--	<exclusions>
+ 		<exclusion>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-tomcat</artifactId>
 			</exclusion>
-		</exclusions>
+		</exclusions> -->
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
@@ -76,11 +76,11 @@
 	 	<version>${oracle14.db.version}</version>
 	 </dependency> -->
 	 <!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
-<!-- <dependency>
+<dependency>
     <groupId>oracle</groupId>
     <artifactId>ojdbc6</artifactId>
     <version>11.2.0.3</version>
-</dependency> -->
+</dependency>
 <dependency>
 	<groupId>javax.servlet</groupId>
 	<artifactId>javax.servlet-api</artifactId>
