--- a/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
+++ b/tutorial-project/spring-boot-jpa-tuto/src/main/resources/application.properties
@@ -6,10 +6,10 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-####myprops.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-####myprops.datasource.username=system
-####myprops.datasource.password=root
-####myprops.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+myprops.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+myprops.datasource.username=system
+myprops.datasource.password=root
+myprops.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 # Keep the connection alive if idle for a long time (needed in production)
 
 #logging.level.org.springframework=debug
@@ -18,13 +18,13 @@
 # = JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
-####myprops.jpa.show-sql=true
+myprops.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-####myprops.jpa.hibernate.ddl-auto=update
+myprops.jpa.hibernate.ddl-auto=update
 # Naming strategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-####myprops.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+myprops.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
 
 # ---------------------------------------------------------------------------------------------------------------------------------------------
@@ -39,10 +39,10 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-myprops.datasource.url=jdbc:mysql://localhost:3306/tutorial
-myprops.datasource.username=root
-myprops.datasource.password=mysql
-myprops.datasource.driver-class-name=com.mysql.jdbc.Driver
+####myprops.datasource.url=jdbc:mysql://localhost:3306/tutorial
+####myprops.datasource.username=root
+####myprops.datasource.password=mysql
+####myprops.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=8280
 # Keep the connection alive if idle for a long time (needed in production)
 
@@ -52,12 +52,12 @@ logging.level.org.springframework=debug
 # = JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
-myprops.jpa.show-sql=true
+####myprops.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 #myprops.jpa.generate-ddl=true
-myprops.jpa.hibernate.ddl-auto=update
+####myprops.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.hbm2ddl.auto=update
 # Naming strategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-myprops.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+####myprops.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
