--- a/tutorial-project/pom.xml
+++ b/tutorial-project/pom.xml
@@ -15,6 +15,7 @@
     <module>jcr-data-migration</module>
     <module>hibernate-poc</module>  -->
     <module>spring-boot-jpa-tuto</module>
+    <module>spring-mvc-tuto</module>
   </modules>
   
     <parent>
@@ -34,6 +35,7 @@
     <oracle8.db.version>12.2.0.1</oracle8.db.version>
     <lombok.version>1.18.8</lombok.version>
     <janino.version>2.7.8</janino.version>
+    <spring.version>5.1.7.RELEASE</spring.version>
   </properties>
 
   <dependencies>
