--- a/tutorial-project/spring-mvc-tuto/pom.xml
+++ b/tutorial-project/spring-mvc-tuto/pom.xml
@@ -23,15 +23,18 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
-		        <!-- Tag libs support for view layer -->
-         
+		<!-- Tag libs support for view layer -->
+        
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
-            <scope>runtime</scope>
+             <scope>runtime</scope>
         </dependency>
-         
+        <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
         <dependency>
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
