--- a/tutorial-project/pom.xml
+++ b/tutorial-project/pom.xml
@@ -36,7 +36,7 @@
     <lombok.version>1.18.8</lombok.version>
     <janino.version>2.7.8</janino.version>
     <spring.version>4.3.0.RELEASE</spring.version>
-   <!--  <spring.version>5.1.7.RELEASE</spring.version> -->
+    <spring.security.version>4.0.2.RELEASE</spring.security.version>
   </properties>
 
   <dependencies>
